--- a/src/style.css
+++ b/src/style.css
@@ -53,13 +53,14 @@ hr {
 }
 
 body {
+  max-width: 100vw;
+  overflow-x: hidden;
   margin: 0;
   background-color: #020202;
-  }
+}
 
 body.unscrollable {
-  width: 100vw;
-  height: 100vh;
+  max-height: 100vh;
   overflow: hidden;
 }
 
@@ -95,7 +96,7 @@ nav > h3 {
   font-family: "Indivisible", "Inter", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   transform: translateY(-100%);
   margin-left: 10%;
-  transition: transform .5s;
+  transition: transform .5s ease-out;
 }
 
 nav > .links-container {
@@ -119,6 +120,7 @@ nav > .links-container h3:hover {
 .banner-heading {
   display: flex;
   max-width: 100%;
+  width: 100%;
   justify-content: center;
   align-items: center;
   overflow-x: hidden;
@@ -211,7 +213,7 @@ main > .about-section {
 
 .about-section .wallpaper-container img {
   object-fit: cover;
-  max-width: 100%;
+  width: 100%;
   min-height: 300px;
   max-height: 400px;
 }
@@ -333,7 +335,7 @@ main > .about-section {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 100%;
+  width: 100%;
   transition: transform .2s;
   user-select: none;
 }
